# sway-plugins

./: Cargo.toml  LICENSE  README.md  config.yml
src/: main.rs
src/models/: config.rs  mod.rs  parts.rs  root.rs  runner.rs  workspace.rs
src/plugins/: autonaming.rs  autotiling.rs  autotransparency.rs  mod.rs  plugin.rs
