[package]
name = "sway-plugins"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Carbonell <a.k.a. atareao>"]
description = "Some plugins for Sway"
readme = "README.md"
homepage = "https://github.com/atareao/swayplugins"
repository = "https://github.com/atareao/swayplugins"
licence = "MIT"
keywords = ["sway", "plugin", "transparency", "autonaming", "autotiling"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
regex = "1.10.4"
serde = "1.0.201"
serde_yaml = "0.9.34"
single-instance = "0.3.3"
swayipc-async = "2.0.2"
tokio = { version = "1.37", features = ["full", "time"] }
# tokio-i3ipc = { git = "https://github.com/leshow/tokio-i3ipc.git", features = ["sway"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
